--- a/foursquare.html
+++ b/foursquare.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Whitbread Product Developer Coding Test - Solution</title>
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="css/app.css"/>
 </head>
 <body>
@@ -30,6 +30,6 @@
 
 
 
-<script src="/js/app.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
