Hooked up the google map, added markers. Need to get some details on the page for each of the locations.

--- a/foursquare.html
+++ b/foursquare.html
@@ -26,6 +26,7 @@
         <div>
             <input type="text" name="query" id="query" placeholder="Enter your search location" size="60"><button id="search">Search</button>
         </div>
+        <br>
         <div id="map" style="display:none;"></div>
         <div id="search-error" style="display: none;">
             <h3>No results</h3>
@@ -38,5 +39,6 @@
 
 
 <script src="js/app.js"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBc3hZuztE30zYq3SlG__KlhUlWheICXaA&callback=initMap"></script>
 </body>
 </html>
