Working solution nincluding write up of what I did in the readme.

--- a/foursquare.html
+++ b/foursquare.html
@@ -20,7 +20,7 @@
     <div class="box">
         <h1>Searching Foursquare</h1>
         <p>This page will let you search for a location and retrieve information on recommended venues nearby.</p>
-        <p>Please enter your search query below. </p>
+        <p>Please enter your search query below. Details of the results can be found below the map.</p>
         <br/>
 
         <div>
@@ -28,6 +28,7 @@
         </div>
         <br>
         <div id="map" style="display:none;"></div>
+        <div id="labels" style="display: none"></div>
         <div id="search-error" style="display: none;">
             <h3>No results</h3>
             <p>Sorry, there appear to be no results for your given query. Please try again with a different search term.</p>
